force-app/main/default/objects/Account/fields/Account_Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Account_Additional_Notes__c</fullName>
    <label>Account Additional Notes</label>
    <type>TextArea</type>
</CustomField>