force-app/main/default/objects/Account/fields/Active_Trials__c.field-meta.xml
<CustomField>
    <fullName>Active_Trials__c</fullName>
    <label>Active Trials</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>