force-app/main/default/objects/Account/fields/Advisory_Board_Experience__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Board_Experience__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advisory Board Experience?</label>
    <type>Checkbox</type>
</CustomField>