force-app/main/default/objects/Account/fields/aztwitter_handler__c.field-meta.xml
<CustomField>
    <fullName>aztwitter_handler__c</fullName>
    <label>aztwitter handler</label>
    <length>80</length>
    <type>Text</type>
</CustomField>