force-app/main/default/objects/Account/fields/Cath_Lab__c.field-meta.xml
<CustomField>
    <fullName>Cath_Lab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cath Lab</label>
    <type>Checkbox</type>
</CustomField>