force-app/main/default/objects/Account/fields/Classification_Code__c.field-meta.xml
<CustomField>
    <fullName>Classification_Code__c</fullName>
    <label>Classification Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>