force-app/main/default/objects/Account/fields/Clinical_Expert__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Expert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clinical Expert</label>
    <type>Checkbox</type>
</CustomField>