force-app/main/default/objects/Account/fields/Clinical_Trail_Investigator__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Trail_Investigator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clinical Trail Investigator</label>
    <type>Checkbox</type>
</CustomField>