force-app/main/default/objects/Account/fields/CoE__c.field-meta.xml
<CustomField>
    <fullName>CoE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Center of Excellence</description>
    <label>CoE</label>
    <type>Checkbox</type>
</CustomField>