force-app/main/default/objects/Account/fields/Consultancy_Experience__c.field-meta.xml
<CustomField>
    <fullName>Consultancy_Experience__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consultancy Experience?</label>
    <type>Checkbox</type>
</CustomField>