force-app/main/default/objects/Account/fields/Contract_Engagements_to_Review__c.field-meta.xml
<CustomField>
    <fullName>Contract_Engagements_to_Review__c</fullName>
    <label># Contract Engagements to Review</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>