force-app/main/default/objects/Account/fields/Contracted_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Advisor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contracted Advisor</label>
    <type>Checkbox</type>
</CustomField>