force-app/main/default/objects/Account/fields/Digital_Presence__c.field-meta.xml
<CustomField>
    <fullName>Digital_Presence__c</fullName>
    <label>Digital Presence</label>
    <length>20</length>
    <type>Text</type>
</CustomField>