force-app/main/default/objects/Account/fields/Enterprise_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Reference_ID__c</fullName>
    <label>Enterprise Reference ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>