force-app/main/default/objects/Account/fields/Equipment_Capabilities_Survey__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Capabilities_Survey__c</fullName>
    <label>Equipment/Capabilities Survey</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Partially Completed</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>