force-app/main/default/objects/Account/fields/External_Urls__c.field-meta.xml
<CustomField>
    <fullName>External_Urls__c</fullName>
    <label>External_Urls</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>