force-app/main/default/objects/Account/fields/HCO_COE__c.field-meta.xml
<CustomField>
    <fullName>HCO_COE__c</fullName>
    <label>HCO COE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>