force-app/main/default/objects/Account/fields/HCO_Phone_CrosswalkSource__c.field-meta.xml
<CustomField>
    <fullName>HCO_Phone_CrosswalkSource__c</fullName>
    <label>HCO Phone CrosswalkSource</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>