force-app/main/default/objects/Account/fields/HCO_Phone_EffectiveEndDate__c.field-meta.xml
<CustomField>
    <fullName>HCO_Phone_EffectiveEndDate__c</fullName>
    <label>HCO Phone EffectiveEndDate</label>
    <type>DateTime</type>
</CustomField>