force-app/main/default/objects/Account/fields/HCO_Phone_EffectiveStartDate__c.field-meta.xml
<CustomField>
    <fullName>HCO_Phone_EffectiveStartDate__c</fullName>
    <label>HCO Phone EffectiveStartDate</label>
    <type>DateTime</type>
</CustomField>