force-app/main/default/objects/Account/fields/HCO_Phone_HcoPhoneId__c.field-meta.xml
<CustomField>
    <fullName>HCO_Phone_HcoPhoneId__c</fullName>
    <label>HCO Phone HcoPhoneId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>