force-app/main/default/objects/Account/fields/HCO_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>HCO_Phone_Number__c</fullName>
    <label>HCO Phone Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>