force-app/main/default/objects/Account/fields/HCO_Specialties_EffectiveEndDate__c.field-meta.xml
<CustomField>
    <fullName>HCO_Specialties_EffectiveEndDate__c</fullName>
    <label>HCO Specialties EffectiveEndDate</label>
    <type>DateTime</type>
</CustomField>