force-app/main/default/objects/Account/fields/HCO_Specialties_EffectiveStartDate__c.field-meta.xml
<CustomField>
    <fullName>HCO_Specialties_EffectiveStartDate__c</fullName>
    <label>HCO Specialties EffectiveStartDate</label>
    <type>DateTime</type>
</CustomField>