force-app/main/default/objects/Account/fields/HCO_X1_Adoption__c.field-meta.xml
<CustomField>
    <fullName>HCO_X1_Adoption__c</fullName>
    <label>HCO X1 Adoption</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>