force-app/main/default/objects/Account/fields/HCP_ID__c.field-meta.xml
<CustomField>
    <fullName>HCP_ID__c</fullName>
    <label>HCP ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>