force-app/main/default/objects/Account/fields/HCP_Pic_RT__c.field-meta.xml
<CustomField>
    <fullName>HCP_Pic_RT__c</fullName>
    <label>HCP Profile Pic</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>