force-app/main/default/objects/Account/fields/KOL_Status__c.field-meta.xml
<CustomField>
    <fullName>KOL_Status__c</fullName>
    <label>KOL Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Teds Test Value</fullName>
                <label>Teds Test Value for Andrea</label>
            </value>
            <value>
                <fullName>International KOL</fullName>
            </value>
            <value>
                <fullName>National KOL</fullName>
            </value>
            <value>
                <fullName>Regional KOL</fullName>
            </value>
            <value>
                <fullName>Regional Speaker</fullName>
            </value>
            <value>
                <fullName>Local Speaker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>