force-app/main/default/objects/Account/fields/Last_Message_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Last_Message_Delivered__c</fullName>
    <label>Last Message Delivered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Natural-Looking Results</fullName>
            </value>
            <value>
                <fullName>Grow New Collagen</fullName>
            </value>
            <value>
                <fullName>Immediate Results</fullName>
            </value>
            <value>
                <fullName>Long-Lasting Results</fullName>
            </value>
            <value>
                <fullName>Easy to Maintain</fullName>
            </value>
            <value>
                <fullName>Versatile Treatment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>