force-app/main/default/objects/Account/fields/LEID__c.field-meta.xml
<CustomField>
    <fullName>LEID__c</fullName>
    <label>LEID #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>