force-app/main/default/objects/Account/fields/Lilly_Activity_Participant__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Activity_Participant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lilly Activity Participant?</label>
    <type>Checkbox</type>
</CustomField>