force-app/main/default/objects/Account/fields/Lilly_Authors_of_Lilly_Pubs__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Authors_of_Lilly_Pubs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authors of Lilly Pubs</label>
    <type>Checkbox</type>
</CustomField>