force-app/main/default/objects/Account/fields/Lilly_BI_A_segmentation__c.field-meta.xml
<CustomField>
    <fullName>Lilly_BI_A_segmentation__c</fullName>
    <label>BI&amp;A segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Segment 1</fullName>
            </value>
            <value>
                <fullName>Segment 2</fullName>
            </value>
            <value>
                <fullName>Option 2</fullName>
                <isActive>false</isActive>
                <label>Option 2</label>
            </value>
            <value>
                <fullName>test</fullName>
                <isActive>false</isActive>
                <label>test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>