force-app/main/default/objects/Account/fields/Lilly_Black_Flag__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Black_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Black Flag</label>
    <type>Checkbox</type>
</CustomField>