force-app/main/default/objects/Account/fields/Lilly_Citations_Per_Pub__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Citations_Per_Pub__c</fullName>
    <label>Citations Per Pub</label>
    <length>10</length>
    <type>Text</type>
</CustomField>