force-app/main/default/objects/Account/fields/Lilly_Clinical_Trials_Count__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Clinical_Trials_Count__c</fullName>
    <label>Clinical Trials Count</label>
    <length>10</length>
    <type>Text</type>
</CustomField>