force-app/main/default/objects/Account/fields/Lilly_Collaborators_Count__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Collaborators_Count__c</fullName>
    <label>Collaborators Count</label>
    <length>10</length>
    <type>Text</type>
</CustomField>