force-app/main/default/objects/Account/fields/Lilly_Congress_Count__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Congress_Count__c</fullName>
    <label>Congress Count</label>
    <length>10</length>
    <type>Text</type>
</CustomField>