force-app/main/default/objects/Account/fields/Lilly_Contract_Owner__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Contract_Owner__c</fullName>
    <label>Contract Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>