force-app/main/default/objects/Account/fields/Lilly_Contracting_Status__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Contracting_Status__c</fullName>
    <label>Contracting Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>