force-app/main/default/objects/Account/fields/Lilly_Current_Balance__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Current_Balance__c</fullName>
    <label>Current Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>