force-app/main/default/objects/Account/fields/Lilly_CustomerTypeCode__c.field-meta.xml
<CustomField>
    <fullName>Lilly_CustomerTypeCode__c</fullName>
    <label>CustomerTypeCode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>