force-app/main/default/objects/Account/fields/Lilly_DispensingAccountIndicator__c.field-meta.xml
<CustomField>
    <fullName>Lilly_DispensingAccountIndicator__c</fullName>
    <label>DispensingAccountIndicator</label>
    <length>100</length>
    <type>Text</type>
</CustomField>