force-app/main/default/objects/Account/fields/Lilly_EmrsystemName__c.field-meta.xml
<CustomField>
    <fullName>Lilly_EmrsystemName__c</fullName>
    <label>EmrsystemName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>