force-app/main/default/objects/Account/fields/Lilly_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Expiration_Date__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>