force-app/main/default/objects/Account/fields/Lilly_GovernmentIndicator__c.field-meta.xml
<CustomField>
    <fullName>Lilly_GovernmentIndicator__c</fullName>
    <label>GovernmentIndicator</label>
    <length>100</length>
    <type>Text</type>
</CustomField>