force-app/main/default/objects/Account/fields/Lilly_H1_HCO_Id__c.field-meta.xml
<CustomField>
    <fullName>Lilly_H1_HCO_Id__c</fullName>
    <label>H1 HCO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>