force-app/main/default/objects/Account/fields/Lilly_H1_Insights__c.field-meta.xml
<CustomField>
    <fullName>Lilly_H1_Insights__c</fullName>
    <label>H1 Insights</label>
    <type>Url</type>
</CustomField>