force-app/main/default/objects/Account/fields/Lilly_HCO_EmrinstallationDate__c.field-meta.xml
<CustomField>
    <fullName>Lilly_HCO_EmrinstallationDate__c</fullName>
    <label>HCO EmrinstallationDate</label>
    <type>Date</type>
</CustomField>