force-app/main/default/objects/Account/fields/Lilly_HCO_FormularyId__c.field-meta.xml
<CustomField>
    <fullName>Lilly_HCO_FormularyId__c</fullName>
    <label>HCO FormularyId</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>