force-app/main/default/objects/Account/fields/Lilly_HCO_KaiserIndicator__c.field-meta.xml
<CustomField>
    <fullName>Lilly_HCO_KaiserIndicator__c</fullName>
    <label>HCO KaiserIndicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>