force-app/main/default/objects/Account/fields/Lilly_HCO_OutpatientsCount__c.field-meta.xml
<CustomField>
    <fullName>Lilly_HCO_OutpatientsCount__c</fullName>
    <label>HCO OutpatientsCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>