force-app/main/default/objects/Account/fields/Lilly_HCO_Phone_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>Lilly_HCO_Phone_CreatedDate__c</fullName>
    <label>HCO Phone CreatedDate</label>
    <type>DateTime</type>
</CustomField>