force-app/main/default/objects/Account/fields/Lilly_HCO_Phone_CrosswalkId__c.field-meta.xml
<CustomField>
    <fullName>Lilly_HCO_Phone_CrosswalkId__c</fullName>
    <label>HCO Phone CrosswalkId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>